Settings screen and Connect all server pages together